--- a/system/crud/static/crud/css/style.css
+++ b/system/crud/static/crud/css/style.css
@@ -1,3 +1,8 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
 :root{
     /*colors*/
     --text-base: #afb6c2;
@@ -8,27 +13,108 @@
 }
 
 body{
-    display: flex;
-    justify-content: center;
-}
-
-.header{
-    display: flex;
-    justify-content: start;
-}
-
-.car-image{
+    background-color: var(--background);
+    color: var(--text-base);
     height: 100vh;
-}
-
-.car-image  img{
-    max-width: 100%;
-}
-
-form > fieldset{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    width: 500px;
+    font-family: Roboto, Sans-Serif;
+}
+
+.box{
+  display: flex;
+  background-color: #d1ac0660;
+  margin: 30px;
+  border-radius: 15px;
+}
+
+.content{
+  margin: 15px;
+}
+
+.forms{
+  margin: 25% 0;
+  padding: 35px 70px;
+  border-radius: 10px;
+}
+
+.text-center{
+  text-align: center;
+}
+
+.mb{
+  margin-bottom: 15px;
+}
+
+a{
+  text-decoration: none;
+  color: var(--primary-color);
+}
+
+form{
+  display: flex;
+  flex-direction: column;
+}
+
+.legend{
+  display: flex;
+  align-items: center;
+}
+
+.legend > h1{
+  margin-left: 10px;
+  margin-bottom: 0;
+}
+
+.inputs{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 15px 0;
+}
+
+.button{
+  background-color: var(--primary-color);
+  border: none;
+  padding: 15px 15px;
+  border-radius: 5px;
+}
+
+.resgatar{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 15px;
+}
+
+.inputs > input{
+  width: 100%;
+  margin-bottom: 5px;
+  border-radius: 5px;
+  border: 2px solid #cdcdcd60;
+  padding: 8px 0;
+  background-color: var(--form-background);
+}
+
+.check{
+  border: 2px solid #cdcdcd60;
+  background-color: var(--form-background);
+}
+
+.inputs > input:hover{
+  border: 2px solid var(--primary-color);
+}
+
+.car-image{
+  max-width: 50%;
+}
+
+.car-image > img{
+  width: 100%;
+  height: 100%;
+  border-radius: 0 15px 15px 0;
+}
+
+.forms{
+  background-color: var(--form-background);
 }
