--- a/system/crud/static/crud/css/style.css
+++ b/system/crud/static/crud/css/style.css
@@ -30,11 +30,15 @@ body{
 }
 
 .content{
-  margin: 15px;
+ /* margin: 15px;*/
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .forms{
-  margin: 25% 0;
+  margin: 20px;
   padding: 35px 70px;
   border-radius: 10px;
 }
