add save_cadastro without preocupations cuidade password

--- a/system/crud/templates/crud/Index.html
+++ b/system/crud/templates/crud/Index.html
@@ -24,6 +24,7 @@
       </div>
       <div class="forms">
         <form action="{% url 'crud:saveuser' %}" method="POST">
+          {% csrf_token %}
             <div class="legend">
               <img src="{% static 'crud/images/log-in.svg' %}" alt="log-in">
               <h1>Faça seu login</h1>
@@ -31,9 +32,9 @@
             <p>Entre com suas informações de cadastro</p>
             <div class="inputs">
               <label for="email_in">E-mail</label>
-              <input type="email" id="email_in">
+              <input type="email" id="email_in" name="email">
               <label for="password">Senha</label>
-              <input type="password" id="password">
+              <input type="password" id="password" name="password">
             </div>
             <div class="resgatar">
               <input class="check" type="checkbox" name="" id="lembre">
@@ -41,7 +42,7 @@
               <a href=""><b>esqueci minha senha</b></a>
             </div>
             <input class="button mb" type="submit" value="ENTRAR">
-            <a class="text-center" href="">Não tem uma conta? <b>Registre-se</b></a>    
+            <a class="text-center" href="{% url 'crud:registrer' %}">Não tem uma conta? <b>Registre-se</b></a>    
         </form>
       </div>
     </div>
