--- a/system/crud/templates/crud/registrer.html
+++ b/system/crud/templates/crud/registrer.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'crud/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'crud/css/registrer.css' %}">
     <link rel="shortcut icon" href="{%  static 'crud/images/favicon.ico' %}" type="image/x-icon">
 </head>
 <body>
@@ -43,12 +43,9 @@
               <label for="password">Senha</label>
               <input type="password" id="password" name="password">
             </div>
-            <input class="button mb" type="submit" value="CADASTRAR">   
+            <input class="button mb" type="submit" value="CADASTRAR">
         </form>
       </div>
-    </div>
-    <div class="car-image">
-        <img src="{%  static 'crud/images/side-image.jpg' %}" alt="car_image">
     </div>
   </div>
   
