--- a/system/crud/templates/crud/registrer.html
+++ b/system/crud/templates/crud/registrer.html
@@ -20,7 +20,7 @@
   <div class="box">
     <div class="content">
       <div class="logo">
-        <img src="{%  static 'crud/images/logo.svg' %}" alt="logo_camp.in">
+        <a href="{% url 'crud:index' %}"><img src="{%  static 'crud/images/logo.svg' %}" alt="logo_camp.in"></a>
       </div>
       <div class="forms">
         <form action="{% url 'crud:save_cadastro' %}" method="POST">
