--- a/system/crud/templates/crud/list_user.html
+++ b/system/crud/templates/crud/list_user.html
@@ -31,7 +31,7 @@
   </header>
 
   <main>
-    <div class="flex-center box">
+    <div class="box">
       <h1 class="title"> Listando os usuários </h1>
       <table border="1">
         <thead>
