--- a/system/crud/static/crud/css/home.css
+++ b/system/crud/static/crud/css/home.css
@@ -13,7 +13,7 @@
   }
   
   body{
-      background-color: #2beb4b;
+      background-color: var(--background);
       color: var(--text-base);
       height: 100vh;
       display: flex;
@@ -50,19 +50,25 @@
   a:hover{
     color: var(--primary-color);
   }
+  
+  .box{
+    background-color: var(--form-background);
+    padding: 30px;
+    border-radius: 15px;
+    box-shadow: 10px 10px 5px black;
+  }
 
   main{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    margin: 20px;
   }
 
   footer{
-    height: 200px;
-    background-color: var(--primary-color);
+    
   }
   
   .user{
     color: var(--primary-color);
-    margin: 0 10px;
+    margin: 0 25px;
   }
