--- a/system/crud/templates/crud/editar.html
+++ b/system/crud/templates/crud/editar.html
@@ -26,7 +26,7 @@
         <li><a href="{% url 'crud:list_user' %}">listar users</a></li>
         <li><a href="{% url 'crud:delete' %}">deletar</a></li>
         <li><a href="{% url 'crud:editar' %}">editar</a></li>
-        <li><a href="#">sair</a></li>
+        <li><a href="{% url 'crud:logout' %}">sair</a></li>
       </ul>
     </div>
   </header>
