retirando a funcionalidade de logout por enquanto

--- a/system/crud/templates/crud/list_user.html
+++ b/system/crud/templates/crud/list_user.html
@@ -25,7 +25,7 @@
         <li><a href="{% url 'crud:list_user' %}">listar users</a></li>
         <li><a href="{% url 'crud:delete' %}">deletar</a></li>
         <li><a href="{% url 'crud:editar' %}">editar</a></li>
-        <li><a href="{% url 'crud:logout' %}">sair</a></li>
+        <!-- <li><a href="{% url 'crud:logout' %}">sair</a></li> -->
       </ul>
     </div>
   </header>
@@ -33,7 +33,7 @@
   <main>
     <div class="box">
       <h1 class="title"> Listando os usuários </h1>
-      <table border="1">
+      <table>
         <thead>
           <tr>
             <th>Username</th>
